--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -49,7 +49,7 @@
                     <div class="slide-content">
                         <h1>Join Our Educational Community</h1>
                         <p>Connect with teachers, collaborate with classmates, and be part of a vibrant learning community.</p>
-                        <button class="btn btn-primary-custom bg-danger">Join Now</button>
+                        <button class="btn btn btn-primary-custom  bg-danger">Join Now</button>
                     </div>
                 </div>
             </div>
@@ -275,7 +275,7 @@
                             <li><i class="fas fa-check-circle text-success"></i> Social Studies Projects</li>
                             <li><i class="fas fa-check-circle text-success"></i> Creative Writing</li>
                         </ul>
-                        <a href="/courses" class="class-btn bg-primary"">Explore Class</a>
+                        <a href="/courses" class="btn2 class-btn bg-primary"">Explore Class</a>
                     </div>
                 </div>
                 
@@ -292,7 +292,7 @@
                             <li><i class="fas fa-check-circle text-success"></i> History & Geography</li>
                             <li><i class="fas fa-check-circle text-success"></i> Language Development</li>
                         </ul>
-                        <a href="/courses" class="class-btn bg-primary"">Explore Class</a>
+                        <a href="/courses" class="btn2 class-btn bg-primary"">Explore Class</a>
                     </div>
                 </div>
                 
@@ -309,7 +309,7 @@
                             <li><i class="fas fa-check-circle text-success"></i> Comprehensive Language</li>
                             <li><i class="fas fa-check-circle text-success"></i> Career Guidance</li>
                         </ul>
-                        <a href="/courses" class="class-btn bg-primary"">Explore Class</a>
+                        <a href="/courses" class="btn2 class-btn bg-primary"">Explore Class</a>
                     </div>
                 </div>
                
