--- a/public/css/home.css
+++ b/public/css/home.css
@@ -487,3 +487,125 @@ section { padding: 80px 0; }
   .section-title h2 { font-size: 1.8rem; }
   .section-title p  { font-size: 1rem; }
 }
+
+
+
+
+
+ /* button animation */
+/* btn animation */
+.btn {
+ --color: #faf7f7;
+ --color2: rgb(10, 25, 30);
+ padding: 0.8em 1.75em;
+ background-color: #a90000;
+ border-radius: 6px;
+ border: .3px solid var(--color);
+ transition: .5s;
+ position: relative;
+ overflow: hidden;
+ cursor: pointer;
+
+ z-index: 1;
+ font-size: 15px;
+  font-family: 'Rubik', sans-serif;
+  font-size: 600;
+ color: var(--color);
+}
+
+.btn::after, .btn::before {
+ content: '';
+ display: block;
+ height: 100%;
+ width: 100%;
+ transform: skew(90deg) translate(-50%, -50%);
+ position: absolute;
+ inset: 50%;
+ left: 25%;
+ z-index: -1;
+ transition: .5s ease-out;
+ background-color: var(--color);
+}
+
+.btn::before {
+ top: -50%;
+ left: -25%;
+ transform: skew(90deg) rotate(180deg) translate(-50%, -50%);
+}
+
+.btn:hover::before {
+ transform: skew(45deg) rotate(180deg) translate(-50%, -50%);
+}
+
+.btn:hover::after {
+ transform: skew(45deg) translate(-50%, -50%);
+}
+
+.btn:hover {
+ color:black;
+ border: 1px solid black;
+   box-shadow: 0px 0px 13px 2px gray;
+}
+
+.btn:active {
+ filter: brightness(.7);
+ transform: scale(.98);
+}
+
+
+/* From Uiverse.io by cssbuttons-io */ 
+.btn2 {
+  background-color: #f20505;
+  font-family: 'Rubik', sans-serif;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  width: 8em;
+  height: 2.6em;
+  margin: 20px;
+  position: relative;
+  cursor: pointer;
+  overflow: hidden;
+  border: 2px solid var(--color);
+  transition: color 0.5s;
+  z-index: 1;
+  font-size: 17px;
+  border-radius: 6px;
+  font-weight: 500;
+  color: white;
+  text-align: center;
+  white-space: nowrap;
+  /* Remove line-height so flexbox controls vertical centering */
+}
+
+.btn2:before {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  background: white;
+  height: 150px;
+  width: 200px;
+  border-radius: 50%;
+}
+
+.btn2:hover {
+  color: black;
+  border: 1px solid black;
+  box-shadow: 0px 0px 13px 2px gray;
+}
+
+.btn2:before {
+  top: 100%;
+  left: 100%;
+  transition: all 0.7s;
+}
+
+.btn2:hover:before {
+  top: -30px;
+  left: -30px;
+}
+
+.btn2:active:before {
+  background: #f70404;
+  transition: background 0s;
+}
