--- a/views/student/profile.ejs
+++ b/views/student/profile.ejs
@@ -310,11 +310,11 @@
         </div>
         
         <div class="action-buttons">
-            <button class="btn btn-primary">
-                <i class="fas fa-edit"></i> Edit Profile
+            <button class="btn btn-danger">
+                <i class="fas fa-"></i> Cancel
             </button>
-            <button class="btn btn-outline">
-                <i class="fas fa-lock"></i> Change Password
+            <button class="btn btn-primary">
+                <i class="fas fa-check"></i> Save Changes
             </button>
         </div>
     </div>
