--- a/views/admin/about_class.ejs
+++ b/views/admin/about_class.ejs
@@ -46,6 +46,10 @@
             Enter Linkedin Link
             <input class="form-control mt-2" type="text" value="<%-contact_info.linkedin%>"  name="Linkedin" id="">
         </div>
+        <div class="col-md-4 mt-4">
+            Enter Work Time
+            <input type="text" class="form-control" value="<%-contact_info.work_time%>" name="work_time" id="">
+        </div>
 
         <div class="col-md-12 mt-4">
              Class Address
