--- a/views/user/contact.ejs
+++ b/views/user/contact.ejs
@@ -250,7 +250,7 @@
                 <i class="fas fa-clock"></i>
                 <div>
                     <p>Mon-Fri: 8AM–6PM</p>
-                    <p>Sat: 9AM–3PM | Sun: Closed</p>
+                    <p><%-contact_info.work_time%></p>
                 </div>
             </div>
             <div class="social-links">
