--- a/views/admin/navbar.ejs
+++ b/views/admin/navbar.ejs
@@ -372,7 +372,7 @@
     <i class="fas fa-user-plus"></i>
     <span class="menu-item-text">Add Student</span>
   </a>
-  <a href="/admin/students" class="menu-item">
+  <a href="/admin/view_students" class="menu-item">
     <i class="fas fa-list"></i>
     <span class="menu-item-text">All Students</span>
   </a>
