--- a/views/admin/navbar.ejs
+++ b/views/admin/navbar.ejs
@@ -431,6 +431,11 @@
         <i class="fa-solid fa-comments-dollar"></i>
         <span class="menu-item-text">Testimonials</span>
       </a>
+
+         <a href="/admin/about" class="menu-item">
+        <i class="fa-solid fa-comments-dollar"></i>
+        <span class="menu-item-text">About Our Education</span>
+      </a>
     
     </div>
   </div>
