--- a/views/user/new_offer.ejs
+++ b/views/user/new_offer.ejs
@@ -140,7 +140,7 @@
     /* Offer Card */
     .offer-card-container {
       transition: transform 0.3s ease;
-      height: 480px;
+      margin-bottom: 2rem;
     }
 
     .offer-card-container:hover {
@@ -157,6 +157,7 @@
       height: 100%;
       display: flex;
       flex-direction: column;
+      min-height: 500px;
     }
 
     .offer-card:hover {
@@ -190,6 +191,7 @@
       flex-grow: 1;
       display: flex;
       flex-direction: column;
+      justify-content: space-between;
     }
 
     .badge-custom {
@@ -246,10 +248,11 @@
     }
 
     .card-actions {
-      margin-top: auto;
+      margin-top: 1rem;
       display: flex;
       justify-content: space-between;
       align-items: center;
+      flex-shrink: 0;
     }
 
     .btn-explore {
@@ -480,7 +483,11 @@
       }
       
       .offer-card-img {
-        height: 130px;
+        height: 200px;
+      }
+      
+      .offer-card {
+        min-height: 450px;
       }
       
       .current-price {
