--- a/views/admin/navbar.ejs
+++ b/views/admin/navbar.ejs
@@ -386,12 +386,24 @@
         <span class="menu-item-text">Departments</span>
       </a>
       
-      
-       
-      <a href="/admin/notice" class="menu-item">
-        <i class="fa-regular fa-bell"></i>
-        <span class="menu-item-text">Notices</span>
-      </a>
+    
+      <div class="menu-item submenu-toggle">
+  <i class="fa-solid fa-graduation-cap"></i>
+  <span class="menu-item-text">Assignments</span>
+  <i class="fas fa-chevron-down ms-auto toggle-icon"></i>
+</div>
+<div class="submenu">
+  <a href="/admin/add_assignments" class="menu-item">
+    <i class="fas fa-user-plus"></i>
+    <span class="menu-item-text">Add Assignments</span>
+  </a>
+  <a href="/admin/view_students" class="menu-item">
+    <i class="fas fa-list"></i>
+    <span class="menu-item-text">All Assignments</span>
+  </a>
+
+</div>
+
 
 
        <a href="/admin/fees" class="menu-item">
