--- a/views/admin/navbar.ejs
+++ b/views/admin/navbar.ejs
@@ -397,7 +397,7 @@
     <i class="fas fa-user-plus"></i>
     <span class="menu-item-text">Add Assignments</span>
   </a>
-  <a href="/admin/view_students" class="menu-item">
+  <a href="/admin/all_assignments" class="menu-item">
     <i class="fas fa-list"></i>
     <span class="menu-item-text">All Assignments</span>
   </a>
