--- a/views/admin/Add_assignments.ejs
+++ b/views/admin/Add_assignments.ejs
@@ -9,8 +9,9 @@
            </div>
         </div>
     </div>
-    <div class="row border rounded-3 p-5 mt-5">
-        <div class="col-md-4 ">
+    <div class="row border rounded-3 p-4 mt-5">
+        <input type="hidden" value="active" name="status" id="">
+        <div class="col-md-4 mt-4 ">
             Select Class <b class="text-danger">*</b>
             <select class="form-control mt-2" name="class" id="" aria-placeholder="data" required>
                 <option>Select Class </option>
@@ -24,20 +25,20 @@
                 <option value="12">12<sub>th</sub></option>
             </select>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4 mt-4">
             Enter Assignments Title <b class="text-danger">*</b>
             <input class="form-control mt-2" type="text" name="title" id="" placeholder="Enter Assignments Title " required>
         </div>
-        <div class="col-md-4 mt-2">
+        <div class="col-md-4 mt-4">
             Enter Last Date <b class="text-danger">*</b>
             <input class="form-control" type="date" name="date" id="" required>
         </div>
-        <div class="col-md-4 mt-3">
+        <div class="col-md-4 mt-4">
             Enter Subject Name <b class="text-danger">*</b>
             <input list="Subject" class="form-control mt-2" type="text" name="subject" id="" placeholder="Enter Subject Name" required>
         </div>
 
-        <div class="col-md-4 mt-3">
+        <div class="col-md-4 mt-4">
             Enter Assignments PDF  <b class="text-danger">*</b>
             <input class="form-control mt-2" type="file" name="pdf" id="" placeholder="Enter FDF" required>
         </div>
