--- a/views/admin/Add_assignments.ejs
+++ b/views/admin/Add_assignments.ejs
@@ -48,7 +48,7 @@
         </datalist>
 
         <div class="col-md-12 mt-5 text-center">
-            <button class="btn btn-primary">Add Assignments</button>
+            <button style="background-color: #4b3f91;" class="btn text-white">Add Assignments</button>
         </div>
 
     </div>
