--- a/views/admin/navbar.ejs
+++ b/views/admin/navbar.ejs
@@ -327,7 +327,7 @@
   position: absolute;
   top: 0;
   left: 70%;
-  width: 50px;
+  width: 25px;
   height: 100%;
   background: repeating-linear-gradient(
     -45deg,
@@ -401,7 +401,22 @@
     <i class="fas fa-list"></i>
     <span class="menu-item-text">All Assignments</span>
   </a>
+</div>
 
+<div class="menu-item submenu-toggle">
+  <i class="fa-solid fa-graduation-cap"></i>
+  <span class="menu-item-text">Study Materials</span>
+  <i class="fas fa-chevron-down ms-auto toggle-icon"></i>
+</div>
+<div class="submenu">
+  <a href="/admin/study_material" class="menu-item">
+    <i class="fas fa-user-plus"></i>
+    <span class="menu-item-text">Add Materials</span>
+  </a>
+  <a href="/admin/all_study_material" class="menu-item">
+    <i class="fas fa-list"></i>
+    <span class="menu-item-text">All Materials</span>
+  </a>
 </div>
 
 
