--- a/views/admin/study_material.ejs
+++ b/views/admin/study_material.ejs
@@ -9,7 +9,13 @@
            </div>
         </div>
     </div>
-    <div class="row"></div>
+    <form action="">
+    <div class="row">
+        <div class="col-md-6">
+            
+        </div>
+    </div>
+    </form>
 </div>    
 
 <%-include("footer.ejs")%>
