--- a/views/admin/All_assignments.ejs
+++ b/views/admin/All_assignments.ejs
@@ -56,11 +56,8 @@
                   </button>
                 </td>
                 <td>
-                    <a href="">
+                    <a href="/admin/delete_assignments/<%-col.assignments_id%>">
                         <button  class="btn btn-warning"><i class="fa-solid fa-triangle-exclamation"></i></button>
-                    </a>
-                    <a href="">
-                        <button class="btn btn-danger"><i class="fa-solid fa-trash"></i></button>
                     </a>
                 </td>
               </tr>
