--- a/views/admin/navbar.ejs
+++ b/views/admin/navbar.ejs
@@ -18,6 +18,16 @@
 
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
+<!-- DataTables CSS -->
+<link
+  href="https://cdn.datatables.net/1.13.6/css/dataTables.bootstrap5.min.css"
+  rel="stylesheet"
+/>
+<link
+  href="https://cdn.datatables.net/buttons/2.4.1/css/buttons.bootstrap5.min.css"
+  rel="stylesheet"
+/>
+
 
   <style>
     :root {
